# cargo-task-wasm

./: Cargo.toml  README.md  TASKS.md
example/: Cargo.toml
example/src/: main.rs
example/tasks/: args.rs  dep.rs  env.rs  generate.rs  list.rs  module.rs  print.rs
example/tasks/shared/: mod.rs
scripts/: run.sh
src/: cargo.rs  lib.rs  main.rs
