[package]
name = "cargo-task"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/cargo-task"
documentation = "https://docs.rs/cargo-task"
description = "A task runner for Cargo"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>",
    "Michael Woerister <michaelwoerister@posteo.de>",
]

[features]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros"] }
toml = "0.8.19"
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"

[dev-dependencies]
