[package]
name = "cargo-task-wasm"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/cargo-task-wasm"
documentation = "https://docs.rs/cargo-task-wasm"
description = "A task runner for Cargo"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>",
    "Michael Woerister <michaelwoerister@posteo.de>",
]
autobins = false

[[bin]]
name = "cargo-task"
path = "src/main.rs"

[features]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros"] }
toml = "0.8.19"
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
fs_extra = "1.3"

[dev-dependencies]
