[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
wstd = "0.4.0"

# [task-dependencies]
# wstd = "0.4.0"

# optional! - this can be omitted to just be inferred instead
[tasks]
print = { }
print2 = { path = "tasks/print.rs" }
env_none = { path = "tasks/env.rs", inherit-env = false }
env_all = { path = "tasks/env.rs", inherit-env = true }
env_some = { path = "tasks/env.rs", inherit-env = ["MY_ENV_VAR"] }

# my-crates-io-task = "0.5.0"
# my-crates-io-task2 = { version = "0.5.0" }
