[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
wstd = "0.4.0"

[package.metadata.task-dependencies]
wasi = "0.13.2"

# optional! - this can be omitted to just be inferred instead
[package.metadata.tasks]
print = { }
# env = { path = "tasks/env.rs", inherit-env = false }
# env = { path = "tasks/env.rs", inherit-env = true }
env = { path = "tasks/env.rs", inherit-env = ["MY_ENV_VAR"] }

# my-crates-io-task = "0.5.0"
# my-crates-io-task2 = { version = "0.5.0" }
